This version:
  - generate cursors from pixbufs (fixes a Win32 bug)
  - work around Win32 bug: refuse paste if mismatched format
  - Chinese (simplified) translation (by Mutse)
  - updated German translation (Stefan Holtzhauer)
  - ignore events from non-drawing devices by default (ignore_other_devices)
  - Polish translation (by Mis Uszatek)

Version 0.4.7 (July 4, 2012):
  - insert image tool (based on patches by Victor Saase and Simon Guest)
  - renamed "Journal" menu to "Page"
  - paste images and text directly from and to other applications
  - lasso tool (based on patch by Ian Woo Kim)

Version 0.4.6 (May 22, 2012):
  - win32 portability code (contributed by Dirk Gerrits)
  - fix bug in PDF export code on 64-bit systems (patch by Robert Buchholz)
  - fix hand tool bug when exiting canvas (#2905711)
  - Italian translation (Marco Poletti), German translation (Stefan Lembach)
  - Spanish translation (Alvaro), Brazil Portuguese translation (Marco Souza)
  - fix save bug with text boxes containing > 4095 characters
  - Czech translation (David Kolibac), Dutch translation (Timo Kluck)
  - fix crash upon unplugging input devices
  - change close dialog box default to "save" (patch by Kit Barnes)
  - option to force PDF background rendering via cairo (slower but nicer)
  - wrapper for missing GdkPixbuf rendering function in newest poppler
  - disable GTK+ XInput bugfix by default (#3429416)
  - fix linker flags (#3208984); evdev coordinate fix (#3244118) (Timo Kluck)
  - specify license version: GPL v2 or later
  - fix 1.#J coordinates from win32 xoj files

Version 0.4.5 (Oct 2, 2009):
  - bugfixes for GTK+ 2.16/2.17 issues with xinput events
  - various minor UI bugfixes
  - gettext internationalization (contributed by David Planella)
  - Catalan translation (by David Planella), French translation
  - use poppler instead of pdftoppm to render PDF backgrounds 
    (after patches by Mike Ter Louw and Bob McElrath)