@@ -6,9 +6,10 @@ Alvaro, Kit Barnes, Eduardo de Barros Lima, Mathieu Bouchard,
 Ole Joergen Broenner, Robert Buchholz, Vincenzo Ciancia, Luca de Cicco, 
 Michele Codutti, Robert Gerlach, Daniel German, Dirk Gerrits, Simon Guest,
 Lukasz Kaiser, Ian Woo Kim, Timo Kluck, David Kolibac, Danny Kukawka, 
-Stefan Lembach, Bob McElrath, Mutse, Andy Neitzke, David Planella, Marco Poletti, 
-Alex Ray, Jean-Baptiste Rouquier, Victor Saase, Marco Souza, Mike Ter Louw, 
-Mis Uszatek, Uwe Winter, Lu Zhihe.
+Stefan Lembach, Bob McElrath, Mutse, Andy Neitzke, David Planella, 
+Marco Poletti, Alex Ray, Jean-Baptiste Rouquier, Victor Saase, 
+Luciano Siqueira, Marco Souza, Mike Ter Louw, Mis Uszatek, Uwe Winter, 
+Lu Zhihe.
 
 (Let me know if you are missing from this list or if your name is 
 mis-spelled)
