@@ -250,6 +250,7 @@ create_winMain (void)
   GtkWidget *optionsAutoloadPdfXoj;
   GtkWidget *optionsLeftHanded;
   GtkWidget *optionsShortenMenus;
+  GtkWidget *optionsPenCursor;
   GtkWidget *separator21;
   GtkWidget *optionsAutoSavePrefs;
   GtkWidget *optionsSavePreferences;
@@ -1402,6 +1403,10 @@ create_winMain (void)
   gtk_widget_show (optionsShortenMenus);
   gtk_container_add (GTK_CONTAINER (menuOptions_menu), optionsShortenMenus);
 
+  optionsPenCursor = gtk_check_menu_item_new_with_mnemonic (_("Pencil Cursor"));
+  gtk_widget_show (optionsPenCursor);
+  gtk_container_add (GTK_CONTAINER (menuOptions_menu), optionsPenCursor);
+
   separator21 = gtk_separator_menu_item_new ();
   gtk_widget_show (separator21);
   gtk_container_add (GTK_CONTAINER (menuOptions_menu), separator21);
@@ -2393,6 +2398,9 @@ create_winMain (void)
   g_signal_connect ((gpointer) optionsShortenMenus, "toggled",
                     G_CALLBACK (on_optionsShortenMenus_activate),
                     NULL);
+  g_signal_connect ((gpointer) optionsPenCursor, "toggled",
+                    G_CALLBACK (on_optionsPenCursor_activate),
+                    NULL);
   g_signal_connect ((gpointer) optionsAutoSavePrefs, "toggled",
                     G_CALLBACK (on_optionsAutoSavePrefs_activate),
                     NULL);
@@ -2762,6 +2770,7 @@ create_winMain (void)
   GLADE_HOOKUP_OBJECT (winMain, optionsAutoloadPdfXoj, "optionsAutoloadPdfXoj");
   GLADE_HOOKUP_OBJECT (winMain, optionsLeftHanded, "optionsLeftHanded");
   GLADE_HOOKUP_OBJECT (winMain, optionsShortenMenus, "optionsShortenMenus");
+  GLADE_HOOKUP_OBJECT (winMain, optionsPenCursor, "optionsPenCursor");
   GLADE_HOOKUP_OBJECT (winMain, separator21, "separator21");
   GLADE_HOOKUP_OBJECT (winMain, optionsAutoSavePrefs, "optionsAutoSavePrefs");
   GLADE_HOOKUP_OBJECT (winMain, optionsSavePreferences, "optionsSavePreferences");
